# nova-times

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
measure_times_demo/: measure_time_script_demo.txt  mesure_times_notebook.ipynb  targ_df.csv
src/nova_times/: cli.py  describe.py  exceptions.py  io.py  measure.py  viz.py
tests/: test_cli.py  test_describe.py  test_e2e.py  test_exceptions.py  test_io.py  test_measure.py  test_viz.py
tests/data/: aavso_000-BPZ-067.csv
