[project]
name = "nova-times"
version = "0.1.0"
description = ""
authors = [
    {name = "destrys",email = "destrys@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "astropy (>=7.0.1,<8.0.0)"
]

[tool.poetry.group.test.dependencies]
pytest = ">=8.3.5,<9.0.0"
flake8 = "^7.2.0"
black = "^25.1.0"
mypy = "^1.15.0"
pytest-cov = "^6.0.0"

[tool.poetry]
packages = [{include = "nova_times", from = "src"}]

[[tool.mypy.overrides]]
module = ["astropy.*"]
ignore_missing_imports = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov"

[project.scripts]
nova-times = 'nova_times.cli:cli'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
